src/traefik/digma-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: digma-analytics-ingress-route
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`digma`)
      services:
        - kind: Service
          name: digma-analytics # [2] The digma's analytics api service name
          port: 5051
          scheme: http
# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: digma-analytics-ingress
# spec:
#   rules:
#   - host: "digma"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: digma-analytics
#             port:
#               number: 5051
